Changing JavaToCppAndBack to CoralCpp everywhere